PROYECTO2/k8s/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rust-api-gateway
  namespace: sopes1-p2
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rust-api-route
  namespace: sopes1-p2
spec:
  parentRefs:
  - name: rust-api-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /health
    backendRefs:
    - name: rust-api-service
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /grpc-202308204
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: rust-api-service
      port: 80
